src/test/06-Errors/error-syntax-1.txt
error-syntax-1.ck:5:12: syntax error
[5] */ it @ is not ! valid => syntax!
               ^
